--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
     <h1>Elyza Bleau</h1>
-    <img src="https://github.com/bleauwonder/Basic-Portfolio/blob/master/assets/images/September_Self-6.jpg" alt="canon self portrait"/>
+    <img src="/Users/elyzableau/desktop/student-bio/September_Self-6.jpg" alt="canon self portrait"/>
     <div class="panel-body">
         <p>Elyza is what is truly called a Renassaince Woman. She's an accomplished musician, who started her career in college honing her craft of classical French horn 
         and singing musical theatre tunes. But after 11 years of french horn and music theory, she dropped it all to sing rock n’ roll and jam on her tenor ukulele. The 
@@ -21,6 +21,10 @@
         <p>When she’s not doing anything of those things, Elyza can be seen coding like a mad woman, step dancing or doing yoga everywhere around NYC, flying on a trapeze, 
         on another new adventure, or getting intimate with strangers with street photography.</p>
 
-    <h2>COntact Info</h2>
-    
+    <h2>Contact Info</h2>
+            <ol>
+                <li>email:<a href="mailto: elyzableau.om@gmail.com"></a></li> 
+                <li>Github:<a href="https://github.com/bleauwonder"></a></li>   
+                <li>Portfolio:</li> 
+            </ol>
     </body>
