--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <h2>Contact Info</h2>
             <ol>
-                <li>email:<a href="mailto: elyzableau.om@gmail.com"></a></li> 
-                <li>Github:<a href="https://github.com/bleauwonder"></a></li>   
-                <li>Portfolio:</li> 
+                <li>email:<a href="mailto:elyzableau.om@gmail.com">Elyza Bleau</a></li> 
+                <li>Github:<a href="https://github.com/bleauwonder">bleauwonder</a></li>   
+                <li>Portfolio:: <a href="https://www.comingsoon.net/">coming soon</a></li> 
             </ol>
     </body>
