--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <title>Student Bio</title>
     </head>
     <body>
+<header>
     <h1>Student Bio</h1>
+</header>
     <h2>Elyza Bleau</h2>
+    <section>
         <img src="/Users/elyzableau/desktop/student-bio/September_Self-6.jpg" alt="canon self portrait" height="420" width="620">
     <div class="panel-body">
         <p>Elyza is what is truly called a Renassaince Woman. She's an accomplished musician, who started her career in college honing her craft of classical French horn 
@@ -20,11 +23,13 @@
         </p>
         <p>When she’s not doing anything of those things, Elyza can be seen coding like a mad woman, step dancing or doing yoga everywhere around NYC, flying on a trapeze, 
         on another new adventure, or getting intimate with strangers with street photography.</p>
-
+    </section>
+<div>
     <h3>Contact Info</h3>
-            <ol>
+            <ul>
                 <li>email:<a href="mailto:elyzableau.om@gmail.com">Elyza Bleau</a></li> 
                 <li>Github:<a href="https://github.com/bleauwonder">bleauwonder</a></li>   
                 <li>Portfolio:: <a href="https://www.comingsoon.net/">coming soon</a></li> 
-            </ol>
+            </ul>
+    </div>
     </body>
