--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <div>
     <h3>Contact Info</h3>
             <ul>
-                <li>email:<a href="mailto:elyzableau.om@gmail.com">Elyza Bleau</a></li> 
-                <li>Github:<a href="https://github.com/bleauwonder">bleauwonder</a></li>   
-                <li>Portfolio:: <a href="https://www.comingsoon.net/">coming soon</a></li> 
+                <li>email:<a href="mailto:elyzableau.om@gmail.com"target="_blank">Elyza Bleau</a></li> 
+                <li>Github:<a href="https://github.com/bleauwonder"target="_blank">bleauwonder</a></li>   
+                <li>Portfolio:: <a href="https://www.comingsoon.net/"target="_blank">coming soon</a></li> 
             </ul>
     </div>
     </body>
